Add Expenses components

--- a/public/global.css
+++ b/public/global.css
@@ -10,7 +10,7 @@ Variables
 ======
 */
 :root {
-  --primaryColor: #2892d7;
+  --primaryColor: #d3a0d4;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
